--- a/templates/input-query.html
+++ b/templates/input-query.html
@@ -1,1 +1,7 @@
-<h5>Enter query:</h5>
+<form>
+    <div class="form-group">
+        <label for="comment">Enter query:</label>
+        <textarea class="form-control" cols="60" rows="10" id="comment"></textarea>
+        <input class="btn btn-primary" type="submit">
+    </div>
+</form>
