- add version history xml file for tracking version and application changes, - display latest version at footer of page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 
-  <title>SPARQANSWER2NL</title>
+  <title>SPARQLANSWER2NL</title>
 
 </head>
 
@@ -44,7 +44,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container-fluid">&copy; Copyright 2018 SPARQANSWER2NL </div>
+    <div class="container-fluid">&copy; Copyright 2018 SPARQLANSWER2NL - Version {{version}}</div>
   </footer>
   <!-- Footer -->
   
