- fix query sample list, - fix page styles, - fix footer styles, - fix answer area, - add placeholder on query input text area

--- a/templates/answer-query.html
+++ b/templates/answer-query.html
@@ -1,1 +1,4 @@
-<h5>Query Answer:</h5>
+<div class="form-group">
+    <label for="answer">Query answer:</label>
+    <textarea class="form-control" rows="5" id="answer"></textarea>
+</div>
