--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container-fluid">&copy; Copyright 2018 SPARQANSWER2NL </div>
+    <div class="container-fluid">&copy; Copyright 2018: SPARQANSWER2NL </div>
   </footer>
   <!-- Footer -->
   
