--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container-fluid">&copy; Copyright 2018: SPARQLANSWER2NL - Version {{version}}</div>
+    <div class="container-fluid"><span>&copy; Copyright 2018: SPARQLANSWER2NL - Version {{version}}</span></div>
   </footer>
   <!-- Footer -->
   
