--- a/templates/input-query.html
+++ b/templates/input-query.html
@@ -1,6 +1,7 @@
+<h5>Enter query:</h5>
+
 <form method="POST" action="/">
     <div class="form-group">
-        <label for="query">Enter query:</label>
         <textarea class="form-control" cols="60" rows="10" id="query" placeholder="SPARQL query.."></textarea>
         <input id="submit_btn" class="btn btn-primary" type="submit">
     </div>
