- add sample queries with labels on database, - display random labels on sample queries list

--- a/templates/sample-query.html
+++ b/templates/sample-query.html
@@ -1,6 +1,6 @@
 <h5>Sample queries:</h5>
-<ul>
-    {% for query in queries %}
-    <li>{{query}}</li>
+<ul class="list-group">
+    {% for label in labels %}
+    <li class="list-group-item">{{label}}</li>
     {% endfor %}
 </ul>
