--- a/templates/sample-query.html
+++ b/templates/sample-query.html
@@ -1,7 +1,8 @@
 <h5>Sample queries:</h5>
-<ul class="list-group">
+<div class="list-group">
     {% for label in labels %}
-    <li class="list-group-item">{{label}}</li>
+    <a href="#" class="list-group-item list-group-item-action">{{label}}</a>
     {% endfor %}
-</ul>
+</div>
+<button id="shuffle" class="btn btn-primary">Shuffle</button>
 
