Initial prototype verbalizer

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 
   <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='js//main.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-  <title>SPARQLANSWER2NL</title>
+  <title>Verbalizer</title>
 
 </head>
 
@@ -48,7 +48,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container-fluid"><span>&copy; Copyright 2018: SPARQLANSWER2NL - Version {{version}}</span></div>
+    <div class="container-fluid"><span>&copy; Copyright 2018: Verbalizer - Version {{version}}</span></div>
   </footer>
   <!-- Footer -->
 </body>
